[gd_scene load_steps=35 format=3 uid="uid://kygcv1vlqjgb"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_0nox1"]
[ext_resource type="Texture2D" uid="uid://bpgd1ftyq1bb4" path="res://assets/basic-terrain-tiles.png" id="4_8bh6c"]
[ext_resource type="PackedScene" uid="uid://y1x11kmtoe4m" path="res://scenes/vehicle.tscn" id="5_tcc75"]
[ext_resource type="Script" path="res://scripts/enemy_manager.gd" id="6_wlepa"]
[ext_resource type="Theme" uid="uid://cfefdawkscps1" path="res://assets/garage_panels.tres" id="9_l4nk1"]
[ext_resource type="FontFile" uid="uid://cw7igdhd0rowb" path="res://assets/fonts/PixelifySans-Bold.ttf" id="10_0ki8t"]
[ext_resource type="Texture2D" uid="uid://dnbg2ybvmtpmw" path="res://assets/lifebar.png" id="10_nd7tv"]
[ext_resource type="Texture2D" uid="uid://cfsyh14fjiu55" path="res://assets/garagem_panels.png" id="11_u2jnv"]
[ext_resource type="FontFile" uid="uid://ccmlo17b67pvu" path="res://assets/fonts/DigitalStrip2BB_Bold.otf" id="12_thd7d"]
[ext_resource type="Texture2D" uid="uid://w3vbd228s3xb" path="res://assets/currency.png" id="13_skivl"]

[sub_resource type="Gradient" id="Gradient_0oouu"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.277551, 1)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_q3nal"]
frequency = 0.075

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_l7sej"]
width = 500
height = 100
color_ramp = SubResource("Gradient_0oouu")
noise = SubResource("FastNoiseLite_q3nal")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_c5eaa"]
texture = ExtResource("4_8bh6c")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0

[sub_resource type="TileSet" id="TileSet_nnw5m"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_c5eaa")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_tp0cn"]
normal = Vector2(-1, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l2riq"]
texture = ExtResource("11_u2jnv")
region_rect = Rect2(114, 11, 73, 40)

[sub_resource type="LabelSettings" id="LabelSettings_2mok7"]
font = ExtResource("12_thd7d")

[sub_resource type="AtlasTexture" id="AtlasTexture_vwph3"]
atlas = ExtResource("13_skivl")
region = Rect2(0, 16, 15, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_epu0u"]
atlas = ExtResource("13_skivl")
region = Rect2(15, 16, 15, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3onf3"]
atlas = ExtResource("13_skivl")
region = Rect2(30, 16, 15, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iklwa"]
atlas = ExtResource("13_skivl")
region = Rect2(45, 16, 15, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6txg"]
atlas = ExtResource("13_skivl")
region = Rect2(60, 16, 15, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ery2"]
atlas = ExtResource("13_skivl")
region = Rect2(0, 0, 15, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jw0or"]
atlas = ExtResource("13_skivl")
region = Rect2(0, 0, 15, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_45kh2"]
atlas = ExtResource("13_skivl")
region = Rect2(15, 0, 15, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p53gu"]
atlas = ExtResource("13_skivl")
region = Rect2(30, 0, 15, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tob87"]
atlas = ExtResource("13_skivl")
region = Rect2(45, 0, 15, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyuvl"]
atlas = ExtResource("13_skivl")
region = Rect2(60, 0, 15, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_p2km8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwph3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epu0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3onf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iklwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6txg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ery2")
}],
"loop": false,
"name": &"buy",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw0or")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45kh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p53gu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tob87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyuvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw0or")
}],
"loop": false,
"name": &"idle",
"speed": 8.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_o0b3t"]
font = ExtResource("10_0ki8t")
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_klq63"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Vehicle/storm:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Vehicle/storm:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.972549, 1, 0.164706, 1)]
}

[sub_resource type="Animation" id="Animation_x84xk"]
resource_name = "storm"
length = 6.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Vehicle/storm:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.972549, 1, 0.164706, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Vehicle/storm:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 1, 1.3, 1.4, 1.7, 1.9, 2.3, 2.7, 3.1, 3.7, 4.1, 4.4, 4.8, 5.1, 5.3, 5.5, 5.8, 5.9, 6.1, 6.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.823529), Color(1, 1, 1, 0), Color(1, 1, 1, 0.172549), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 0.823529), Color(1, 1, 1, 0), Color(1, 1, 1, 0.823529), Color(1, 1, 1, 0), Color(1, 1, 1, 0.823529), Color(1, 1, 1, 0), Color(1, 1, 1, 0.172549), Color(1, 1, 1, 0), Color(1, 1, 1, 0.823529), Color(1, 1, 1, 0), Color(1, 1, 1, 0.172549), Color(1, 1, 1, 0), Color(1, 1, 1, 0.823529), Color(1, 1, 1, 0), Color(1, 1, 1, 0.172549), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t4hn0"]
_data = {
"RESET": SubResource("Animation_klq63"),
"storm": SubResource("Animation_x84xk")
}

[node name="Level" type="Node2D" groups=["level"]]
script = ExtResource("1_0nox1")
enemy_noise = SubResource("NoiseTexture2D_l7sej")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_nnw5m")

[node name="Vehicle" parent="." instance=ExtResource("5_tcc75")]

[node name="storm" type="ColorRect" parent="Vehicle"]
modulate = Color(1, 1, 1, 0)
offset_left = -332.0
offset_top = -253.0
offset_right = 332.0
offset_bottom = 252.0
color = Color(0.972549, 1, 0.164706, 1)

[node name="EnemyManager" type="Node2D" parent="." groups=["enemy_manager"]]
script = ExtResource("6_wlepa")

[node name="GoalArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalArea"]
shape = SubResource("WorldBoundaryShape2D_tp0cn")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -49.0
offset_top = 8.0
offset_right = 56.0
offset_bottom = 25.0
grow_horizontal = 2
theme = ExtResource("9_l4nk1")
max_value = 1.0
show_percentage = false

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(222, 16)
texture = ExtResource("10_nd7tv")

[node name="CurrencyContainer" type="Panel" parent="CanvasLayer"]
offset_left = 332.0
offset_top = 7.0
offset_right = 405.0
offset_bottom = 47.0
theme = ExtResource("9_l4nk1")
theme_override_styles/panel = SubResource("StyleBoxTexture_l2riq")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/CurrencyContainer"]
layout_mode = 2
offset_left = 24.0
offset_top = 5.0
offset_right = 71.0
offset_bottom = 35.0
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="HBoxContainer" parent="CanvasLayer/CurrencyContainer/MarginContainer"]
layout_mode = 2

[node name="CurrencyLabel" type="Label" parent="CanvasLayer/CurrencyContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 24
text = "?"
label_settings = SubResource("LabelSettings_2mok7")
vertical_alignment = 1

[node name="CurrencySkull" type="AnimatedSprite2D" parent="CanvasLayer/CurrencyContainer"]
position = Vector2(23, 20)
sprite_frames = SubResource("SpriteFrames_p2km8")
animation = &"idle"

[node name="FPSLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
offset_right = 40.0
offset_bottom = 21.0
text = "FPS: ?"

[node name="NextCityLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 11.0
offset_top = 13.0
offset_right = 104.0
offset_bottom = 34.0
text = "Next City: ?"
label_settings = SubResource("LabelSettings_o0b3t")

[node name="StormDamageTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t4hn0")
}
